通用部分的开发

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,14 @@
-<!--
- * @Author: Jelly
- * @Date: 2020-11-15 21:40:02
- * @LastEditors: Jelly
- * @LastEditTime: 2020-11-15 21:41:21
- * @Github: https://github.com/szjSmiling/react-admin-shop
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="autor" content="Jelly">
-  <title>HAPPYMMMALL ADMIN</title>
+  <title>HAPPYMMMALL</title>
+  <link href="http://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-  <div id="app">test</div>
+  <div id="app"></div>
 </body>
 </html>
