--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,9 @@
+<!--
+ * @Author: sunzhongjie
+ * @Date: 2020-11-15 21:40:02
+ * @LastEditors: Jelly
+ * @LastEditTime: 2020-11-24 21:41:52
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +16,6 @@
 </head>
 <body>
   <div id="app"></div>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
